Fix input width on mobile

--- a/apps/festival/festival/src/app/event/identity/identity.component.scss
+++ b/apps/festival/festival/src/app/event/identity/identity.component.scss
@@ -70,7 +70,6 @@
         padding: 0;
 
         mat-form-field {
-          background-color: white;
           width: 100%;
         }
       }
